# rf2

./: ProjectHome.md  Variables_Make
LCD/: lcd16x2.c  lcd16x2.h  main.c  mensajes.h
ant_RF/rabbit/: io_config.lib  main.c  rfid_asic_rc632.lib  rfid_iso14443A_mifare.lib  rfid_layer2_iso14443A.lib  utils.lib
docs/: rf2.aux  rf2.cls  rf2.lof  rf2.out  rf2.tex  rf2.toc  tesis_uni.blg  tesis_uni.out  tesis_uni.toc  unitesis.cls
docs/Anexos/: antena.tex  docHW.tex  pdf.tex  smartcards.tex  sw.tex
docs/Bibliografia/: bib.tex  biblio.bib
docs/Capitulos/: conclusiones.tex  descProy.tex  docHW.aux  docHW.tex  ensayos.tex  funcional.tex  hw.aux  hw.tex  hw.tex.backup  intro.tex  listaCompras.aux  listaCompras.tex  objProy.tex  pruebas.tex  sw.aux  sw.tex  tiempos.tex
docs/Glosario/: glosario.aux  glosario.tex
docs/Imagenes/: rfid_coil.eps
docs/Portada/: agradecimientos.tex  dedicatoria.aux  dedicatoria.tex  resumen.aux  resumen.tex
docs/Prefacio/: prefacio.aux  prefacio.tex
gpio/: Makefile  beagle_gpio.h  gpio.c  gpio.h  main.c
paper/: ieee.cls  ieeefig.sty  paper_rf2.tex
pres_fin/: rf2.tex
sc/: CURRENT  ctapi.c  ctapi.h  ctbcs.h  defines.h  ifdhandler.h  rf2_sc.c  serial.c  serial.h  test.c
sc/serial/: serialcomm.c  serialcomm.h
scripts/: leer
serial/: Makefile  main.c
trunk/LCD/: Makefile  lcd16x2.c  main.c  (+1 more)
trunk/ant_RF/beagle/librfid-0.2.0_svn/utils/: Makefile  Makefile.am  Makefile.in  common.c  librfid-send_script  librfid-tool  librfid-tool.c  mifare-tool
trunk/ant_RF/beagle/librfid-0.2.0_svn/utils/.deps/: librfid-tool.Po  send_script.Po
(+248 files in other folders)
